prusti-tests/tests/verify_overflow/fail/issues/issue-389-1.rs
fn test() {
    let mut k: usize = 0;
    while k - 123 > 0 { } //~ ERROR attempt to subtract with overflow
}

fn main() {}
